--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </section>
     <!-- Lean Vocabularies -->
     <section>
-      <div class="text-center pb-10">
+      <div class="text-center py-10">
         <h2 class="text-3xl md:text-5xl font-bold mb-4">
           <span class="text-sky-500">Let's </span> Learn Vocabularies
         </h2>
@@ -104,22 +104,42 @@
         ></div>
       </div>
     </section>
+    <!-- search -->
+    <section class="flex justify-center items-center">
+      <div class="join">
+        <div>
+          <label class="input validator join-item">
+            <input
+              id="input-search"
+              type="email"
+              placeholder="Search vocabulary"
+              required
+            />
+          </label>
+        </div>
+        <button id="btn-search" class="btn btn-primary join-item">
+          Search
+        </button>
+      </div>
+    </section>
+    <!-- spinner -->
+    <section id="spinner" class="flex justify-center items-center py-10 hidden">
+      <span class="loading loading-bars loading-xl"></span>
+    </section>
     <section
       id="word-container"
-      class="bg-gray-100 p-10 w-11/12 mx-auto rounded-xl grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"
+      class="bg-gray-100 my-10 p-10 w-11/12 mx-auto rounded-xl grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"
     >
       <div class="text-center col-span-full">
         <p class="font-bangla">আপনি এখনো কোন Lesson Select করেন ন</p>
         <h2 class="text-4xl font-semibold mt-4">একটি Lesson Select করুন।</h2>
       </div>
     </section>
-
     <!-- Open the modal using ID.showModal() method -->
     <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
-    <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+    <dialog id="word_modal" class="modal modal-bottom sm:modal-middle">
       <div class="modal-box">
-        <h3 class="text-lg font-bold">Hello!</h3>
-        <p class="py-4">Press ESC key or click the button below to close</p>
+        <div id="details-container" class="space-y-4"></div>
         <div class="modal-action">
           <form method="dialog">
             <!-- if there is a button in form, it will close the modal -->
@@ -128,7 +148,6 @@
         </div>
       </div>
     </dialog>
-
     <script src="./script/index.js"></script>
   </body>
 </html>
