--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <span class="font-bangla">জানালা</span>
           </a>
         </div>
-        <div class="flex-none">
+        <div class="flex-none hidden md:flex">
           <ul class="menu menu-horizontal px-1 space-x-4">
             <li>
               <button class="btn btn-outline btn-primary">
@@ -148,6 +148,107 @@
         </div>
       </div>
     </dialog>
+    <!-- Faq section -->
+    <section class="w-10/12 mx-auto py-16">
+      <div class="text-center my-8">
+        <h2 class="text-3xl md:text-5xl font-bold mb-4">
+          <span class="text-sky-500">Frequently</span> Asked Questions
+        </h2>
+      </div>
+      <div class="space-y-4">
+        <div class="collapse collapse-plus bg-base-100 border border-base-300">
+          <input type="radio" name="my-accordion-3" checked="checked" />
+          <div class="collapse-title font-semibold">
+            1. How can I start learning English on this website?
+          </div>
+          <div class="collapse-content text-sm">
+            You can start by exploring our beginner lessons, interactive
+            exercises, and quizzes. We also offer structured courses to guide
+            you step by step.
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-100 border border-base-300">
+          <input type="radio" name="my-accordion-3" checked="checked" />
+          <div class="collapse-title font-semibold">
+            2. Is this website free to use?
+          </div>
+          <div class="collapse-content text-sm">
+            You can start by exploring our beginner lessons, interactive
+            exercises, and quizzes. We also offer structured courses to guide
+            you step by step.
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-100 border border-base-300">
+          <input type="radio" name="my-accordion-3" checked="checked" />
+          <div class="collapse-title font-semibold">
+            3. Do I need to create an account?
+          </div>
+          <div class="collapse-content text-sm">
+            You can start by exploring our beginner lessons, interactive
+            exercises, and quizzes. We also offer structured courses to guide
+            you step by step.
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-100 border border-base-300">
+          <input type="radio" name="my-accordion-3" checked="checked" />
+          <div class="collapse-title font-semibold">
+            4. How can I build my English vocabulary?
+          </div>
+          <div class="collapse-content text-sm">
+            You can start by exploring our beginner lessons, interactive
+            exercises, and quizzes. We also offer structured courses to guide
+            you step by step.
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-100 border border-base-300">
+          <input type="radio" name="my-accordion-3" checked="checked" />
+          <div class="collapse-title font-semibold">
+            5. Do you offer certificates for completed courses?
+          </div>
+          <div class="collapse-content text-sm">
+            You can start by exploring our beginner lessons, interactive
+            exercises, and quizzes. We also offer structured courses to guide
+            you step by step.
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- footer section -->
+    <footer class="border-t-2 border-red-100 bg-blue-50">
+      <div
+        class="flex flex-col gap-12 md:flex-row justify-between items-center w-11/12 mx-auto py-16"
+      >
+        <div class="space-y-3 text-center md:text-left">
+          <a
+            href=""
+            class="flex items-center text-xl justify-center md:justify-start"
+          >
+            <span class="">Eglish</span>
+            <img src="./assets/logo.png" alt="" />
+            <span class="font-bangla">জানালা</span>
+          </a>
+          <p class="font-bangla font-medium">ইংরেজি শিখুন সহজে</p>
+          <p class="text-xs">Providing ED-Tech Applications since 2025</p>
+        </div>
+        <div class="text-center md:text-right">
+          <p>Follow us</p>
+          <div class="text-2xl flex gap-4 mt-2">
+            <a href="">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./script/index.js"></script>
   </body>
 </html>
